# aiai

./: .gitignore  README.md  del.sh  predict.py  preprocess.py  pyproject.toml  train_model.py
raw/: README.md
test/: README.md
train/: README.md
