[project]
name = "aiai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "librosa>=0.11.0",
    "scikit-learn>=1.9.0",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
    "torchcodec>=0.14.0",
    "transformers>=5.13.0",
]
